# yallma3-mini-inference

./: .gitignore  Cargo.toml  PoC_Bun_load.js  README.md
.cargo/: config.toml
src_llm/: base_transformer.rs  forward.rs  lib.rs  main.rs  parallelism.rs  quantization.rs  sampler.rs  tokenizer.rs  transformer.rs  transformer_llama_gguf.rs  transformer_llama_lmrs.rs  transformer_llama_st.rs  transformer_llama_st_seq.rs  util.rs  weight_type.rs
tests/: forward_compare.rs  gguf_forward_test.rs  matmul_q8_tests.rs  parallelism_tests.rs  simd_tests.rs  st_forward_test.rs
