[package]
name = "yallma3-llm"
version = "0.1.0"
edition = "2021"

[lib]
path = "src_llm/lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "yallma3-infer"
path = "src_llm/main.rs"

[features]
debug_prints = []

[dependencies]
hxd = "0.1.3"
memmap2 = "0.9.9"
num_cpus = "1.16"
rayon = "1.11.0"
wide = "0.7.28"
half = "2.4"
serde_json = "1"
minijinja = "2.7"
regex = "1"

[profile.release]
codegen-units = 1
lto = true
